rename cfg/ to etc/ move config related functions to config.c remove log option from config in favour of command line option do automatic config file dispatch in OPENRELEASE shell wrapper:  use one of the following possible config files:  - command line one if specified  - the file located on the first partition of the first usb drive if exists  - /mnt/lg/user/etc/openrelease/openrelease.cfg if exists  - etc/openrelease.cfg if exists some cosmetic chages in usage don't copy example config files to resulting image

--- a/README
+++ b/README
@@ -4,11 +4,11 @@ This project is aimed to impove functionality of current version of RELEASE.
 
 Currently implemented features:
  - daemonization (-d option),
- - configuration via a config file (example: cfg/openrelease.cfg),
+ - configuration via a config file (example: etc/openrelease.cfg),
    - stdin/stdout redirection to a fifo/file,
    - additional log file,
    - enable/disable divx preview,
- - remote keys remapping via keymap config file (example: cfg/openrelease_keymap.cfg)
+ - remote keys remapping via keymap config file (example: etc/openrelease_keymap.cfg)
 
 Requirements:
  - RELEASE.cfg from firmware,
